# MazeGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  steam_appid.txt  vcpkg.json
scripts/: build-linux.bat  build-linux.sh  linux.dockerfile  setup-linux.sh
shaders/: triangle.vert  wall.frag  wall.vert
src/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  DefaultScene.cpp  DefaultScene.h  FrameBuffer.cpp  FrameBuffer.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  HelloTriangleApplication.h  Material.cpp  Material.h  Maze.cpp  Maze.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Scene.h  Shader.cpp  Shader.h  TextMazeGenerator.cpp  TextMazeGenerator.h  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
steamworks_sdk/tools/ContentBuilder/builder/: update_hosts_cached.vdf
steamworks_sdk/tools/ContentBuilder/builder/appcache/: packageinfo.vdf
steamworks_sdk/tools/ContentBuilder/builder/config/: config.vdf  libraryfolders.vdf
steamworks_sdk/tools/ContentBuilder/builder/dumps/: assert_steamcmd.exe_20220910134130_1.dmp
steamworks_sdk/tools/ContentBuilder/builder/logs/: appinfo_log.txt  bootstrap_log.txt  cloud_log.txt  compat_log.txt  configstore_log.txt  connection_log.txt  content_log.txt  parental_log.txt  shader_log.txt  systemaudiomanager.txt  systemdockmanager.txt  systemmanager.txt  systemperfmanager.txt  workshop_log.txt
steamworks_sdk/tools/ContentBuilder/builder/userdata/24672535/7/: remotecache.vdf
steamworks_sdk/tools/ContentBuilder/builder/userdata/24672535/7/remote/: serverbrowser_hist.vdf  sharedconfig.vdf
steamworks_sdk/tools/ContentBuilder/builder/userdata/24672535/config/: localconfig.vdf
steamworks_sdk/tools/ContentBuilder/builder/userdata/24672535/ugc/: 241100_subscriptions.vdf
